Fix screen width
- Fix of screen width misalignment.

--- a/src/src/CSS/styles.css
+++ b/src/src/CSS/styles.css
@@ -3,6 +3,12 @@ html {
     box-sizing: border-box;
 }
 
+*, *::before, *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
 .calculator {
     border: 1.2px solid darkslategray;
     border-radius: 7px;
